--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
+* {
+   background-color: rgb(234, 244, 240);
+}
+
+.intro {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a:visited,
+Link:visited,
+a:link,
+Link:link {
+  text-decoration: none;
+  color: black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navbar-menu {
+text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.navbar-list {
+  display: inline-block;
+  padding: 10px;
+  text-align: left;
+  background-color: rgb(222, 182, 202);
+  border-radius: 5px;
+  padding: 10px;
+  margin:  10px 10px 10px 10px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar-list:hover {
+  background-color: pink;
 }
